--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "markdown-it",
     "markdown",
     "diagram",
-    "svgbob",
     "mermaid"
   ],
   "author": "Angus Hollands",
@@ -34,7 +33,6 @@
   },
   "dependencies": {
     "markdown-it": "^12.2.3",
-    "mermaid": "^8.7.0",
-    "svgbob-wasm": "^1.0.0"
+    "mermaid": "^9.1.3"
   }
 }
