--- a/www/package.json
+++ b/www/package.json
@@ -1,20 +1,23 @@
 {
-    "name": "@agoose77/test-markdown-it-mermaid",
-    "version": "0.0.0",
-    "description": "create an app to test @agoose77/markdown-it-mermaid",
-    "private": true,
-    "author": "Angus Hollands <goosey15@gmail.com>",
-    "license": "(MIT OR Apache-2.0)",
-    "dependencies": {
-        "@agoose77/markdown-it-mermaid": "file:../",
-        "bootstrap": "^5.1.3",
-        "markdown-it": "^10.0.0"
-    },
-    "devDependencies": {
-        "css-loader": "^6.7.1",
-        "style-loader": "^3.3.1",
-        "webpack": "^5.72.0",
-        "webpack-cli": "^4.9.2",
-        "webpack-dev-server": "^4.8.1"
-    }
+  "name": "@agoose77/test-markdown-it-mermaid",
+  "version": "0.0.0",
+  "description": "create an app to test @agoose77/markdown-it-mermaid",
+  "private": true,
+  "author": "Angus Hollands <goosey15@gmail.com>",
+  "license": "(MIT OR Apache-2.0)",
+  "dependencies": {
+    "@agoose77/markdown-it-mermaid": "file:../",
+    "codemirror": "^5.65.8"
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.0"
+  },
+  "scripts": {
+    "build:dev": "webpack",
+    "build": "webpack --mode=production"
+  }
 }
