handle braces, usage content

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "bugs": {
     "url": "https://github.com/agoose77/markdown-it-mermaid/issues"
   },
+  "typings": "lib/index.d.ts",
   "homepage": "https://github.com/agoose77/markdown-it-mermaid#readme",
   "devDependencies": {
     "@types/markdown-it": "^12.2.3",
