--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lib/**/*"
   ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "npm run lint:prettier",
+    "lint:prettier": "prettier --write --list-different \"**/*.{md,js,ts,json,yml}\""
   },
   "repository": {
     "type": "git",
@@ -30,10 +32,15 @@
   "devDependencies": {
     "@types/markdown-it": "^12.2.3",
     "@types/mermaid": "^9.1.0",
-    "typescript": "~4.8.3"
+    "typescript": "~4.8.3",
+    "prettier": "^2.7.1"
   },
   "dependencies": {
     "markdown-it": "^13.0.1",
     "mermaid": "^9.1.7"
+  },
+  "prettier": {
+    "printWidth": 88,
+    "proseWrap": "always"
   }
 }
