--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,6 @@
     "strictNullChecks": true,
     "target": "es2015"
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
