--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -6,7 +6,7 @@ channels:
 
 dependencies:
   - docutils >=0.18
-  - myst-nb
+  - myst-parser
   - nodejs >=16,<17
   - pydata-sphinx-theme >=0.10.0,<0.11
   - python >=3.10,<3.11
